# rabocard2ynab

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_on_release.yml
src/: main.rs
