[package]
name = "rabocard2ynab"
version = "0.1.0"
authors = ["Alexander Jeurissen <1220084+alexanderjeurissen@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
atty = "0.2.14"
failure = "0.1.8"
csv = "1.2"
serde = { version = "1.0.171", features = ["derive"] }
chrono = "0.4.26"
